--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,22 @@
-h1{
+h1 {
   text-align: center;
-  font-weight: 400;
+  font-weight: bold;
   font-family: 'Playfair Display', serif;
 }
-body{
+
+body {
   font-family: 'Poppins', sans-serif;
+  background-color: #F2F2F2;
 }
-.jumbotron{
+
+.jumbotron {
   color: white;
   background-color: #000080;
+  height: 250px;
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
 .cards {
   position: relative;
   width: 100%;
@@ -43,11 +50,13 @@ body{
 .cards:hover .middle {
   opacity: 1;
 }
-button{
+
+button {
   border: none;
   background-color: #000080;
   color: white;
 }
+
 .button {
   background-color: #000080;
   color: white;
@@ -55,62 +64,86 @@ button{
   padding: 10px 26px;
   border-radius: 10px
 }
-#tailors{
+
+#tailors {
   display: none;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 40px;
 }
-#electricians{
+
+#electricians {
   display: none;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 40px;
 }
-#carpenters{
+
+#carpenters {
   display: none;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 40px;
 }
-#mechanics{
+
+#mechanics {
   display: none;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 40px;
 }
+
+#cards {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
 /* start of ivy code */
 .profile {
- box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
- max-width: 300px;
- margin: auto;
- text-align: center;
- font-family: arial;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  font-family: arial;
 }
 
 .title {
- color: grey;
- font-size: 18px;
+  color: grey;
+  font-size: 18px;
 }
 
 .button1 {
- border: none;
- outline: 0;
- display: inline-block;
- padding: 8px;
- color: white;
- background-color: #000080;
- text-align: center;
- cursor: pointer;
- width: 100%;
- font-size: 18px;
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000080;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
 }
 
 a {
- text-decoration: none;
- font-size: 22px;
- color: black;
- margin: 24px 0;
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+  margin: 24px 0;
 }
 
 .button1:hover, a:hover {
- opacity: 0.7;
+  opacity: 0.7;
 }
+
 h2 {
- text-align: center;
- font-family: 'Playfair Display', serif;
+  text-align: center;
+  font-family: 'Playfair Display', serif;
 }
 
 .profile {
- display: inline-block;
- padding: 50px;
+  display: inline-block;
+  padding: 50px;
 }
+
 /* end of ivy code */
