--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,9 @@
-h1 {
+#fundi{
   text-align: center;
   font-weight: bold;
   font-family: 'Playfair Display', serif;
+  font-size: 32px;
+  padding-bottom: 50px;
 }
 
 body {
@@ -15,11 +17,12 @@ body {
 .jumbotron {
   color: #F2F2F2;
   background-color: #000080;
-  height: 180px;
+  height: 150px;
   text-align: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin-left: auto;
   margin-right: auto;
+
 }
 
 .cards {
@@ -116,6 +119,7 @@ button:active {
 #cardRow {
   padding-right: 15px;
   padding-left: 15px;
+  padding-top: 50px;
 }
 
 /* start of ivy code */
