add final edits

--- a/css/ivy.css
+++ b/css/ivy.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: font-family: 'Courgette', cursive;
+    ;
 }
 
 * {
@@ -144,7 +145,8 @@ input[type=submit]:hover {
     }
 }
 
-.fa {
+
+/* .fa {
     padding: 20px;
     font-size: 30px;
     width: 50px;
@@ -190,7 +192,7 @@ input[type=submit]:hover {
 .fa-skype {
     background: #00aff0;
     color: white;
-}
+} */
 
 #contact-submit {
     background-color: #000080;
@@ -229,3 +231,79 @@ input[type=submit]:hover {
 #call {
     color: white;
 }
+
+body {
+    font-family: "Lato", sans-serif;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
+}
+
+#landingpage {
+    background-image: url("https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
+#menu {
+    font-size: 60px;
+    color: #ffffff;
+    font-family: 'Courgette', cursive;
+}
+
+#block {
+    font-size: 100px;
+    position: relative;
+    color: #000080;
+    left: 550px;
+    top: 300px;
+    font-family: 'Courgette', cursive;
+}
+
+#mySidenav {
+    font-family: 'Courgette', cursive;
+    opacity: 0.8;
+}
+
+#slogan {}
